samples/_failures_safe/1761639718_594da9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0858468.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_d0858468.c:174:9: error: expected declaration or statement at end of input
  174 |         case TOKEN_IDENTIFIER: return "IDENTIFIER";
      |         ^~~~
./samples/SAFE/__tmp_d0858468.c:174:9: error: expected declaration or statement at end of input
